--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
   dash:
-    image: dash/app
+    image: dash:latest
     restart: always
     environment:
       ENV PYTHONUNBUFFERED: 0
