--- a/Dockerfiles/Dockerfile.epmt-interface
+++ b/Dockerfiles/Dockerfile.epmt-interface
@@ -2,8 +2,8 @@ FROM python:3.7.4
 
 USER root
 WORKDIR /home/dash
-ADD requirements-ui.txt.py3 requirements.txt.py3 /home/dash/
-RUN pip install --trusted-host pypi.python.org -r requirements-ui.txt.py3 -r requirements.txt.py3
+ADD requirements-ui.txt.py3 /home/dash/
+RUN pip install --trusted-host pypi.python.org -r requirements-ui.txt.py3
 
 #ENV EPMT_GUI_MOCK=1
 EXPOSE 8050
