--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,8 +14,8 @@ variables:
 build:interface:
   image: python:3.7.4
   script:
+    - pip install --upgrade pip
     - pip install --trusted-host pypi.python.org -r requirements-ui.txt.py3
-    - python index.py & disown
     # Start testing against mock interface
     # install google chrome
     - wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
@@ -27,7 +27,7 @@ build:interface:
     - wget -O /tmp/chromedriver.zip http://chromedriver.storage.googleapis.com/`curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE`/chromedriver_linux64.zip
     - unzip /tmp/chromedriver.zip chromedriver -d /usr/local/bin/
     # upgrade pip
-    - pip install --upgrade pip
-    # install selenium
+    # install selenium after 
     - pip install selenium
-    - python first_dash_test.py
+    - python index.py & disown
+    - python test/first_dash_test.py
