--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ cache:
     - .cache/pip
 
 build:interface:
-  image: python:3.7.4
+  image: python:3.7.6
   script:
     - pip install --upgrade pip
     - pip install --trusted-host pypi.python.org -r requirements-ui.txt.py3
@@ -27,7 +27,9 @@ build:interface:
     # upgrade pip
     # install selenium after 
     - pip install selenium dash[testing]
+    - echo "Start Mock Server"
     - python index.py & disown
+    - echo "Point and click menus and buttons firing callbacks"
     - python test/find_and_click.py http://localhost:8050
-    # Test url parser and generator
+    - echo "pytest url parser and generator"
     - pytest -q test/test_urlparse.py
