--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,11 +24,9 @@ build:interface:
     - apt-get install -yqq unzip
     - wget -O /tmp/chromedriver.zip http://chromedriver.storage.googleapis.com/`curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE`/chromedriver_linux64.zip
     - unzip /tmp/chromedriver.zip chromedriver -d /usr/local/bin/
-    # upgrade pip
-    # install selenium after 
-    #- pip install selenium dash[testing]
     #- echo "pytest url parser and generator"
     #- EPMT_GUI_MOCK=1 python -m pytest test/test_urlparse.py
+    - pip install selenium dash[testing]
     - echo "Start Mock Server"
     - python index.py & disown
     - echo "Point and click menus and buttons firing callbacks"
