--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,20 +14,18 @@ build:interface:
   script:
     - pip install --upgrade pip
     - pip install --trusted-host pypi.python.org -r requirements-ui.txt.py3
-    # Start testing against mock interface
-    # install google chrome
     - wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
     - sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
     - apt-get -y update
-    - apt-get install -y google-chrome-stable
-    # install chromedriver
-    - apt-get install -yqq unzip
+    - apt-get install -y google-chrome-stable           # install google chrome
+    - apt-get install -yqq unzip                        # install chromedriver
     - wget -O /tmp/chromedriver.zip http://chromedriver.storage.googleapis.com/`curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE`/chromedriver_linux64.zip
     - unzip /tmp/chromedriver.zip chromedriver -d /usr/local/bin/
-    #- echo "pytest url parser and generator"
-    #- EPMT_GUI_MOCK=1 python -m pytest test/test_urlparse.py
+    - python -m py_compile epmt *.py components/*.py		# Compile everything
+    - echo "pytest url parser and generator"
+    - EPMT_GUI_MOCK=1 python -m pytest test/test_urlparse.py
     - pip install selenium dash[testing]
     - echo "Start Mock Server"
     - python index.py & disown
     - echo "Point and click menus and buttons firing callbacks"
-    - python test/find_and_click.py http://localhost:8050
+    - python test/find_and_click.py http://localhost:8050 # Start testing against mock interface
