--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ build:interface:
     - unzip /tmp/chromedriver.zip chromedriver -d /usr/local/bin/
     - python -m py_compile *.py components/*.py		# Compile everything
     - echo "pytest url parser and generator"
-    - EPMT_GUI_MOCK=1 python -m pytest test/test_urlparse.py
+    - python -m unittest -v test/test_urlparse.py
     - pip install selenium dash[testing]
     - echo "Start Mock Server"
     - python index.py & disown
