Major revision to bar graph, basic testing of workflow, basic dataframe for mock eq get_ops

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,4 +28,6 @@ build:interface:
     - echo "Start Mock Server"
     - python index.py & disown
     - echo "Point and click menus and buttons firing callbacks"
-    - python test/find_and_click.py http://localhost:8050 # Start testing against mock interface
+    # Start testing against mock interface
+    - python test/find_and_click.py http://localhost:8050
+    - python test/workflow_find_and_click.py localhost
