--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,8 +14,6 @@ build:interface:
   script:
     - pip install --upgrade pip
     - pip install --trusted-host pypi.python.org -r requirements-ui.txt.py3
-    - echo "unittest url parser and generator"
-    - EPMT_GUI_MOCK=1 python -m unittest test/test_urlparse.py
     - wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
     - sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
     - apt-get -y update
@@ -26,6 +24,8 @@ build:interface:
     - python -m py_compile *.py components/*.py		# Compile everything
     #- python -m unittest -v test/test_urlparse.py
     - pip install selenium dash[testing]
+    - echo "unittest url parser and generator"
+    - python -m unittest test/test_urlparse.py
     - echo "Start Mock Server"
     - python index.py & disown
     - echo "Point and click menus and buttons firing callbacks"
