Adding a delay to let server start

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,7 @@ build:interface:
     - python -m unittest test/test_urlparse.py
     - echo "Start Mock Server"
     - python index.py & disown
+    - sleep 30
     - echo "Point and click menus and buttons firing callbacks"
     # Start testing against mock interface
     - python test/find_and_click.py http://localhost:8050
