Made url scheming consistant across tests, fixed import of tag_from_string to handle mock case

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,4 +33,4 @@ build:interface:
     - echo "Point and click menus and buttons firing callbacks"
     # Start testing against mock interface
     - python test/find_and_click.py http://localhost:8050
-    - python test/workflow_find_and_click.py localhost
+    - python test/workflow_find_and_click.py http://localhost:8050
