--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
     volumes:
       - ./test/:/usr/workspace
     working_dir:  /usr/workspace/
-    command: bash -c "python workflow_find_and_click.py dash && python find_and_click.py http://dash:8050"
+    command: bash -c "python workflow_find_and_click.py http://dash:8050 &&
+      python find_and_click.py http://dash:8050"
     links:
       - dash
